# youtui

./: .gitignore  CLAUDE.md  CODEBASE_GUIDE.md  Cargo.toml  LICENSE  README.md  TODO.md  TODO_OPTIMIZATION.md  a.txt  cleanup_library.sh  config.toml.vim-example  pr_body.txt
.github/workflows/: ci.yml  release.yml
.opencode/plans/: enship-final.md  enship.md  esc-warnings-e.md  final-3.md  final-4.md  final-cleanup.md  final-implementation.md  final-polish.md  genius-fix.md  highlight-lyrics.md  leftovers.md  like-context-menu.md  like-feature.md  like-logs-fix.md  lyrics-vim-motions.md  re-eval-keybinds.md  remaining-fixes.md  ux-polish.md  vim-enship.md  vim-final.md  vim-fix-plan.md  vim-polish.md  visual-range.md
async-callback-manager/src/task/: tests.rs
docs/: 01-architecture.md  03-data-flow.md  04-configuration.md  05-keybindings.md  07-testing.md  08-known-issues.md  09-roadmap.md  README.md  api-services.md  cli-tools.md  refactor-suckless.md  ytmapi-cli.md  ytmapi-rs-status.md
docs/02-crates/: async-callback-manager.md  genius-rs.md  json-crawler.md  metadata-provider.md  vi-text-editor.md  youtui.md  ytmapi-cli.md  ytmapi-rs.md
docs/06-subsystems/: album-splitting.md  audio.md  auth.md  lyrics.md  playlist-editor.md  queue.md  scrobbling.md  validation.md
docs/man/: genius-rs.1  ytmapi-cli.1
docs/subsystems/: album_art_popup.md  notes.md
libs/audio-player/: Cargo.toml
libs/audio-player/src/: lib.rs
libs/genius-rs/: Cargo.toml
libs/genius-rs/src/: annotations.rs  lib.rs  main.rs  scrape.rs  search.rs
libs/lrclib-rs/: Cargo.toml
libs/lrclib-rs/src/: lib.rs  main.rs
libs/metadata-provider/: Cargo.toml
libs/metadata-provider/src/: Enhanced genre hierarchy browser.txt  discogs.rs  genius.rs  genre_map.rs  lastfm_album.rs  lastfm_track.rs  lib.rs  metal_api.rs  musicbrainz.rs  overrides.rs  util.rs  validated_metadata.rs
libs/metal-proxy/: Cargo.toml
libs/metal-proxy/src/: main.rs
libs/rym-definitions/: Cargo.toml
libs/rym-definitions/src/: main.rs  parse.rs  scrape.rs
libs/rym-genre-data/: Cargo.toml
libs/rym-genre-data/data/: rym-hierarchy.txt
libs/rym-genre-data/src/: lib.rs
libs/vi-text-editor/: Cargo.toml
libs/vi-text-editor/proptest-regressions/: lib.txt
libs/vi-text-editor/src/: lib.rs
libs/ytmapi-cli/: Cargo.toml
libs/ytmapi-cli/src/: main.rs
scripts/: metal-archives-proxy.py
youtui/: CHANGELOG.md  Cargo.toml  README.md  TODO.md  musixmatch_session.json  test_section.m4a
youtui/config/: config.toml  config.toml.vim-example
youtui/src/: api.rs  app.rs  appevent.rs  async_rodio_sink.rs  cli.rs  config.rs  core.rs  drawutils.rs  keybind.rs  main.rs  tests.rs  youtube_downloader.rs
youtui/src/app/: media_controls.rs  queue_persistence.rs  scrobbler.rs  server.rs  structures.rs  ui.rs  view.rs
youtui/src/app/component/: actionhandler.rs
youtui/src/app/server/: api.rs  messages.rs  player.rs  song_downloader.rs  song_thumbnail_downloader.rs
youtui/src/app/server/providers/: discogs.rs  genius.rs  lastfm_album.rs  lastfm_track.rs  mod.rs  musicbrainz.rs  overrides.rs  util.rs
youtui/src/app/ui/: action.rs  browser.rs  draw.rs  draw_media_controls.rs  footer.rs  header.rs  library.rs  logger.rs  playlist.rs
youtui/src/app/ui/browser/: albumsearch.rs  artistsearch.rs  draw.rs  library.rs  playlistsearch.rs  shared_components.rs  songsearch.rs
youtui/src/app/ui/browser/artistsearch/: search_panel.rs  songs_panel.rs
youtui/src/app/ui/browser/playlistsearch/: search_panel.rs  songs_panel.rs
youtui/src/app/ui/components/: mod.rs  vi_text_editor.rs
youtui/src/app/ui/playlist/: album_art_popup.rs  config_editor_popup.rs  effect_handlers.rs  effect_handlers_playlist.rs  lyrics_popup.rs  mod.rs  notes_popup.rs  playlist_details_popup.rs  playlist_edit_popup.rs  playlist_editor_popup.rs  playlist_main.rs  playlist_rename_popup.rs  playlist_save_popup.rs  playlist_update_popup.rs  song_info_popup.rs  tests.rs
youtui/src/app/view/: draw.rs
youtui/src/cli/: querybuilder.rs
youtui/src/config/: keymap.rs
youtui/src/widgets/: scrolling_list.rs  scrolling_table.rs  tab_grid.rs
youtui/src/youtube_downloader/: native.rs  yt_dlp.rs
ytmapi-rs/: Cargo.toml
ytmapi-rs/examples/: gen_artist2_output.rs  gen_artist_output.rs
ytmapi-rs/src/: auth.rs  builder.rs  client.rs  common.rs  error.rs  lib.rs  nav_consts.rs  parse.rs  query.rs  simplified_queries.rs  utils.rs
ytmapi-rs/src/auth/: browser.rs  noauth.rs  oauth.rs
ytmapi-rs/src/parse/: artist.rs  history.rs  library.rs  playlist.rs  podcasts.rs  rate.rs  search.rs  song.rs
ytmapi-rs/src/parse/search/: tests.rs
ytmapi-rs/src/query/: library.rs  playlist.rs  rate.rs  search.rs
ytmapi-rs/src/query/playlist/: additems.rs  create.rs  edit.rs
ytmapi-rs/src/query/search/: filteredsearch.rs
ytmapi-rs/test_json/: browse_artist_albums_output.txt  get_artist_20240705_output.txt  get_artist_20250310_output.txt  get_library_songs_20240701_output.txt  get_library_songs_continuation_20240910_output.txt  get_playlist_details_20240624_output.txt  get_playlist_details_20250604_output.txt  get_playlist_details_no_channel_thumbnail_20240818_output.txt  get_playlist_tracks_20250604_output.txt  search_basic_radio_20240830_output.txt  search_basic_top_result_card_20240721_output.txt  search_basic_top_result_no_type_20240720_output.txt  search_basic_with_about_message_20240809_output.txt  search_basic_with_podcast_community_playlists_20250605_output.txt  search_basic_with_vodcasts_type_not_specified_20240612_output.txt  search_basic_with_vodcasts_type_specified_20240612_output.txt  search_highlighted_top_result_20240107_output.txt  search_songs_20231226_output.txt
ytmapi-rs/tests/: live_integration_tests.rs
ytmapi-rs/tests/utils/: mod.rs
