[package]
name = "youtui"
version = "0.0.37"
# Required for let chains
edition = "2024"
authors = ["nick42d"]
license = "MIT"
description = "A simple TUI YouTube Music player"
homepage = "https://github.com/nick42d/youtui"
repository = "https://github.com/nick42d/youtui"
readme = "../README.md"
keywords = ["youtube", "music", "player", "tui"]
categories = ["multimedia::audio"]
# Required for ceil_char_boundary
rust-version = "1.91"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.3"
crossterm = { version = "0.29.0", features = ["event-stream", "serde"] }
futures = "0.3.32"
# Disable chafa feature which requires a platform dependency, for easier distribution.
ratatui-image = { version = "10.0.8", default-features = false, features = [ "image-defaults", "crossterm" ] }
# Required for ratatui-image
image = "0.25.10"
rat-text = "3.1.0"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
tui-logger = { version = "0.18.2", features = ["tracing-support"] }
serde = "1.0.228"
serde_json = "1.0.149"
ytmapi-rs = { path = "../ytmapi-rs", version = "0.3.2", features = [ "reqwest" ] }
vi-text-editor = { path = "../libs/vi-text-editor" }
genius-rs = { path = "../libs/genius-rs" }
lrclib-rs = { path = "../libs/lrclib-rs" }
metadata-provider = { path = "../libs/metadata-provider" }
rym-genre-data = { path = "../libs/rym-genre-data" }
audio-player = { path = "../libs/audio-player" }
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "blocking"] }
lru = "0.12"
md5 = "0.7"
ib-romaji = "0.2"
lindera = { version = "3", default-features = false, features = ["embed-ipadic"] }
lindera-ipadic = "3"
tokio = { version = "1.52.1", features = ["full"] }
async-callback-manager = { path = "../async-callback-manager", version = "0.1.1" }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
directories = "6.0.0"
toml = "1.1.2"
# For intersperse feature. RFC in progress to bring to std
# https://github.com/rust-lang/rust/issues/79524

itertools = "0.14.0"
tokio-stream = { version = "0.1.18", features = ["fs"] }
async_cell = "0.2.3"
bytes = "1.11.1"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
souvlaki = { version = "0.8.3", default-features = false, features = [
  "use_zbus",
] }
rand = "0.9"
fs-err = { version = "3.3.0", features=["tokio"] }
tokio-util = { version = "0.7.18", features = ["io"] }
# These platforms require an open window to use media controls.
# https://github.com/Sinono3/souvlaki/blob/master/examples/window.rs
[target.'cfg(any(target_os="windows",target_os="macos"))'.dependencies]
raw-window-handle = "0.6.2"
winit = "0.30.13"

[dependencies.rusty_ytdl]
# version = "0.7.4"
# package = "rusty_ytdl"
version = "0.7.4-youtui-vendored.4"
package = "youtui-vendored-rusty_ytdl"
default-features = false
features = ["live", "rustls"]



[dependencies.tempfile]
version = "3.27.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
async-callback-manager = { path = "../async-callback-manager", version = "0.1.1", features = ["task-equality", "task-debug"] }

[lints]
workspace = true
