[package]
name = "genius-rs"
version = "0.1.0"
edition = "2021"
description = "Genius.com API client with HTML scraping for lyrics"
license = "MIT"
authors = ["caos-obliquo"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
scraper = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
