[package]
name = "lrclib-rs"
version = "0.1.0"
edition = "2021"
description = "LRCLIB.net lyrics API client"
license = "MIT"
authors = ["caos-obliquo"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
