[package]
name = "metal-proxy"
version = "0.1.0"
edition = "2021"
description = "Rust-native headless browser proxy for Metal Archives (bypasses Cloudflare)"

[dependencies]
tokio = { version = "1", features = ["full"] }
chromiumoxide = "0.9"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.21"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
url = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
